--- a/CV.html
+++ b/CV.html
@@ -52,7 +52,7 @@
                 <span class="tablet">Kotlin</span>
                 <span class="tablet">Python</span>
                 <span class="tablet">SQL</span>
-                <span class="tablet tablet-second">Git / Arc</span>
+                <span class="tablet tablet-second">Git / Ar</span>
                 <span class="tablet tablet-second">Gradle</span>
                 <span class="tablet tablet-second">Multi-module</span>
             </div>
