--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
                 <span class="tablet">Android SDK</span>
                 <span class="tablet">Java</span>
                 <span class="tablet">Kotlin</span>
-                <span class="tablet">Python</span>
+                <span class="tablet">C/C++</span>
                 <span class="tablet">SQL</span>
-                <span class="tablet tablet-second">Git / Ar</span>
+                <span class="tablet tablet-second">Git</span>
                 <span class="tablet tablet-second">Gradle</span>
-                <span class="tablet tablet-second">Multi-module</span>
             </div>
         </section>
         <section>
@@ -67,6 +66,20 @@
                         <li>Оценка и улучшение релевантности ответа голосового помощника</li>
                     </ul>
                     <span class="card-date">Январь 2024 &#8212 Настоящее время</span>
+                </div>
+            </ul>
+        </section>
+        <section>
+            <h1 class="section-title">Иной опыт</h1>
+            <ul class="section-content cards-column">
+                <div class="card-column">
+                    <span class="card-name">Yandex.Crowd </span><br/>
+                    <p class="card-span-title">Асессор</p>
+                    <ul class="stack-content">
+                        <li>Участие в хакатоне EESTech Challenge по мобильной разработке</li>
+                        <li>Опыт разработки в учебных проектах на Java и Kotlin</li>
+                        <li>Самостоятельное изучение: Jetpack Compose, SQL,Git, протоколы TCP/IP</li>
+                    </ul>
                 </div>
             </ul>
         </section>
