--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="hero__link" href="mailto:mameyka45@gmail.com"><i class='bx bxl-gmail'></i></a>
                 <a class="hero__link" href="https://t.me/smuzlmaker"><i class='bx bxl-telegram'></i></a>
                 <a class="hero__link" href="https://github.com/SMUZlMAKER"><i class='bx bxl-github'></i></a>
-                <a class="hero__link" href=""><i class='bx bxs-file-pdf'></i></a>
+                <a class="hero__link" href="asset/Tomilov_Matvey_CV.pdf"><i class='bx bxs-file-pdf'></i></a>
             </div>
         </div>
         <div class="hero__box">
