--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h1 class="section-title">Языки</h1>
             <div class="section-content tablets">
                 <span class="tablet">Русский &#8212 С2 носитель</span>
-                <span class="tablet tablet-second">Английский &#8212 B2 upper intermediate</span>
+                <span class="tablet tablet-second">Английский &#8212 B1 средний</span>
             </div>
         </section>
         <section>
