--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <ul class="section-content cards-column">
                 <div class="card-column">
                     <ul class="stack-content">
-                        <li>Участие в хакатоне EESTech Challenge по мобильной разработке</li>
+                        <li>Участие в хакатоне EESTech Challenge по мобильной разработке <a class="hero__link" href="https://github.com/PixelPerfectH"><i class='bx bxl-github'></i></a></li>
+                        <li>Участие в meetup ПРОСТО x Touch Instinct по Android-разработке <a class="hero__link" href="https://github.com/Valentin92257/TL_Prosto"><i class='bx bxl-github'></i></a></li>
                         <li>Опыт разработки в учебных проектах на Java и Kotlin</li>
                         <li>Самостоятельное изучение: Jetpack Compose, SQL,Git, протоколы TCP/IP</li>
                     </ul>
@@ -105,7 +106,7 @@
                         <li>Алгоритмы и структуры данных</li>
                     </ul>
                     <p class="card-span-title">Разработка мобильного приложения для онлайн просмотра фильмов 
-                    (Создано исключительно в образовательных целях и не подлежит распространению)</p>
+                    <a class="hero__link" href="https://github.com/SMUZlMAKER/VideoTranslator"><i class='bx bxl-github'></i></a></p>
                     <span class="card-date">Сентябрь 2022 &#8212 Настоящее время</span>
                 </div>
             </div>
