--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                     </ul>
                     <span class="card-date">Январь 2024 &#8212 Настоящее время</span>
                 </div>
+                <div class="card-column">
+                    <span class="card-name">Газпром трансгаз Санкт-Петербург </span><br/>
+                    <p class="card-span-title">Практика - стажировка</p>
+                    <ul class="stack-content">
+                        <li>Отдел Автоматизированных систем управления в производственно-технологической деятельности</li>
+                    </ul>
+                    <span class="card-date">Июнь &#8212 Июль 2024</span>
+                </div>
             </ul>
         </section>
         <section>
