--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <h1 class="section-title">Навыки и умения</h1>
             <div class="section-content tablets">
                 <span class="tablet">Android SDK</span>
+                <span class="tablet">Jetpack Compose</span>
                 <span class="tablet">Kotlin</span>
                 <span class="tablet">Java</span>
                 <span class="tablet">C/C++</span>
