--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     </ul>
                     <p class="card-span-title">Разработка мобильного приложения для онлайн просмотра фильмов 
                     <a class="hero__link" href="https://github.com/SMUZlMAKER/VideoTranslator"><i class='bx bxl-github'></i></a></p>
+                    <p class="card-span-title">Мобильное приложение для контроля дедлайнов 
+                    <a class="hero__link" href="https://rodion56730.github.io/polydeadlinespage/"> Демонстрация<i class='bx bxl-github'></i></a>
+                    <a class="hero__link" href="https://github.com/SMUZlMAKER/PolyDeadlines/"> Исходный код<i class='bx bxl-github'></i></a></p>
                     <span class="card-date">Сентябрь 2022 &#8212 Настоящее время</span>
                 </div>
             </div>
@@ -131,6 +134,6 @@
 </div>
 </body>
 <footer>
-    <span class="update-date">01.10.2024</span>
+    <span class="update-date">23.11.2024</span>
 </footer>
 </html>
