--- a/index.html
+++ b/index.html
@@ -116,9 +116,12 @@
                     </ul>
                     <p class="card-span-title">Разработка мобильного приложения для онлайн просмотра фильмов 
                     <a class="hero__link" href="https://github.com/SMUZlMAKER/VideoTranslator"><i class='bx bxl-github'></i></a></p>
-                    <p class="card-span-title">Мобильное приложение для контроля дедлайнов 
-                    <a class="hero__link" href="https://rodion56730.github.io/polydeadlinespage/"> Демонстрация<i class='bx bxl-github'></i></a>
-                    <a class="hero__link" href="https://github.com/SMUZlMAKER/PolyDeadlines/"> Исходный код<i class='bx bxl-github'></i></a></p>
+                    <p class="card-span-title">Мобильное приложение для контроля дедлайнов
+                        <ul class="stack-content">
+                            <li>Демонстрация<a class="hero__link" href="https://rodion56730.github.io/polydeadlinespage/"> <i class='bx bxl-github'></i></a></li>
+                            <li>Исходный код<a class="hero__link" href="https://github.com/SMUZlMAKER/PolyDeadlines/"><i class='bx bxl-github'></i></a></li>
+                        </ul>
+                    </p>
                     <span class="card-date">Сентябрь 2022 &#8212 Настоящее время</span>
                 </div>
             </div>
