--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <span class="card-name">Yandex.Crowd </span><br/>
                     <p class="card-span-title">Асессор</p>
                     <ul class="stack-content">
-                        <li>Оценка и улучшение релевантности ответа голосового помощника</li>
+                        <li>Оценка и улучшение релевантности ответов голосового помощника и сервиса Нейро</li>
                     </ul>
                     <span class="card-date">Январь 2024 &#8212 Настоящее время</span>
                 </div>
@@ -131,6 +131,6 @@
 </div>
 </body>
 <footer>
-    <span class="update-date">03.2025</span>
+    <span class="update-date">04.2025</span>
 </footer>
 </html>
